--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.3.5",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/mongodb": "^3.5.14",
     "apollo-server-express": "^2.12.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
     "graphql": "^14.6.0",
     "graphql-tools": "^5.0.0",
     "mongodb": "^3.5.7",
+    "mongoose": "^5.9.11",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -43,6 +47,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "25.1.4",
+    "@types/mongoose": "^5.7.14",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
